--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Emergency Service Directory</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body { font-family: 'Hind Madurai', sans-serif; }
+        .call-history-item { font-family: 'Inter', sans-serif; }
+        .btn-green { background-color: #00A63E; color: white; }
+        .btn-green:hover { background-color: #008C34; }
+        .btn-outline { border: 1px solid #ccc; color: #333; }
+        .btn-outline:hover { background-color: #f5f5f5; }
+        .badge-style { 
+            background-color: #f1f1f1;
+            color: #444;
+            padding: 4px 12px;
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            font-weight: 500;
+            width: fit-content;
+        }
+        .nav-item-bg {
+            background-color: #E8F5E9;
+            color: #333;
+            padding: 4px 12px;
+            border-radius: 9999px;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+        }
+        .nav-icon {
+            width: 23.25px; /* Heart and Coin icons size */
+            height: 23.25px;
+        }
+        .call-history-title-icon {
+            width: 24px; /* Call History icon size */
+            height: 24px;
+        }
+        /* Mobile responsive adjustments */
+        @media (max-width: 640px) {
+            .nav-mobile-flex-wrap {
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 1rem;
+            }
+            .nav-item-bg {
+                padding: 4px 8px; /* Reduce horizontal padding */
+            }
+        }
+    </style>
 </head>
 <body>
     
