--- a/index.html
+++ b/index.html
@@ -52,7 +52,51 @@
         }
     </style>
 </head>
-<body>
+<body class="bg-[#F9FAFB]">
+
+<nav class="bg-white p-6 flex justify-between items-center shadow-md flex-wrap md:flex-nowrap">
+    <div class="flex items-center gap-2 mb-4 md:mb-0">
+        <img src="images/logo-dark.png" class="w-[50px] h-[50px] rounded-full" alt="Bangladesh Logo">
+        <div class="flex flex-col font-bold text-[#006747]">
+            <span class="text-xl leading-5">Emergency</span>
+            <span class="text-xl leading-5">Service</span>
+        </div>
+    </div>
+    <div class="flex items-center gap-4 text-sm font-medium nav-mobile-flex-wrap">
+        <span class="nav-item-bg">
+            <span id="heartCount" class="font-bold text-black">0</span> <img src="images/heart.png" alt="Heart Icon" class="nav-icon">
+        </span>
+        <span class="nav-item-bg">
+            <span id="coinCount" class="font-bold text-black">100</span> <img src="images/coin.png" alt="Coin Icon" class="nav-icon">
+        </span>
+        <span class="bg-green-600 text-white px-4 py-2 rounded-full font-bold flex items-center gap-1">
+            <span id="copyCount">0</span> Copy
+        </span>
+    </div>
+</nav>
+
+<section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center text-white py-16 shadow-lg">
+    <img src="images/logo.png" class="mx-auto w-24 h-24 mb-6" alt="Bangladesh Logo">
+    <h2 class="text-4xl font-bold">Emergency Service Directory</h2>
+    <p class="mt-3 text-lg opacity-90">Government Emergency Services at Your Fingertips – A Project by Government of the People's Republic of Bangladesh</p>
+</section>
+
+<main class="p-6 grid grid-cols-1 md:grid-cols-4 lg:grid-cols-12 gap-6">
+
+    <div class="col-span-1 md:col-span-3 lg:col-span-9 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6" id="cardsContainer">
+    </div>
+
+    <div class="col-span-1 md:col-span-1 lg:col-span-3 bg-white rounded-2xl shadow-lg p-5 flex flex-col h-fit">
+        <div class="flex justify-between items-center mb-4">
+            <h3 class="font-semibold text-lg flex items-center gap-2">
+                <img src="images/history.png" alt="Call History Icon" class="call-history-title-icon"> Call History
+            </h3>
+            <button onclick="clearHistory()" class="btn-green px-6 py-2 rounded-xl text-sm">Clear</button>
+        </div>
+        <ul id="historyList" class="text-sm text-gray-700 space-y-4 overflow-y-auto"></ul>
+    </div>
+</main>
+
     
 </body>
 </html>
