previous implemented updated code add

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
         copyCount++;
         copyCountEl.innerText = copyCount;
     }
+    function updateHeartCount() {
+        heartCount++;
+        heartCountEl.innerText = heartCount;
+    }
 
     </script>
 </body>
