--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
             <div class="flex gap-3 mt-4">
                 <button class="copy-btn btn-outline rounded-xl px-4 py-2 flex-1 flex justify-center items-center gap-1">
-                    <img src="Multimedia_(50).png" alt="Copy Icon" class="nav-icon">
+                    <img src="images/Multimedia_(50).png" alt="Copy Icon" class="nav-icon">
                     Copy
                 </button>
                 <button class="call-btn btn-green rounded-xl px-4 py-2 flex-1 flex justify-center items-center gap-1">📞 Call</button>
