new updated for  mobile responsive

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body class="bg-[#F9FAFB]">
 
-<nav class="bg-white p-6 flex flex-col md:flex-row justify-between items-center shadow-md">
+<nav class="bg-white p-6 flex justify-between items-center shadow-md flex-wrap">
     <div class="flex items-center gap-2 mb-4 md:mb-0">
         <img src="images/logo-dark.png" class="w-[50px] h-[50px] rounded-full" alt="Bangladesh Logo">
         <div class="flex flex-col font-bold text-[#006747]">
